[package]
name = "audio-buffer-wasm"
version = "0.1.0"
authors = ["Skrytt"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
rand = "0.7.3"

[dependencies.getrandom]
version = "0.1.14"
default-features = true
features = ["wasm-bindgen"]

[dependencies.console_error_panic_hook]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
version = "0.1.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
